# wasm-bindgen

./: .gitignore  0001-Add-additional-licenses-to-futures-and-web-sys-crate.patch  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  PLAN.md  README.md  benchmark.sh  bisect.sh  build.rs  codecov.yaml  codecov.yml  index.html  index.node  introduction.html  justfile  print.html  publish.rs  searcher-c2a407aa.js  searchindex-2b346328.js  searchindex-4877d7a4.js  searchindex-747b8832.js  searchindex-ef940f3c.js  searchindex.js  searchindex.json  taplo.toml  toc-6e05dfda.js  toc-7e39e376.js  toc-985ce3bd.js  toc.html  ts-gen-review.md
benchmarks/: Cargo.toml  README.md  index.html
benchmarks/codspeed-napi/: Cargo.toml  package.json
benchmarks/codspeed-napi/src/: lib.rs
benchmarks/pkg/: wasm_bindgen_benchmark.d.ts  wasm_bindgen_benchmark.js  wasm_bindgen_benchmark_bg.wasm  wasm_bindgen_benchmark_bg.wasm.d.ts
benchmarks/wcodspeed/: Cargo.toml
benchmarks/wcodspeed/src/: codspeed.rs  main.rs
crates/cargo-wasm-bindgen/: Cargo.toml  README.md
crates/cargo-wasm-bindgen/src/: main.rs
crates/cli/: Cargo.toml  build.rs
crates/cli-support/: Cargo.toml
crates/cli-support/src/: decode.rs  descriptor.rs  descriptors.rs  descriptors_section.rs  externref.rs  intrinsic.rs  lib.rs  multivalue.rs  normalize.rs  suggest.rs  test_runner.rs  testing.rs  wasm2es6js.rs  wasm_conventions.rs
crates/cli-support/src/interpreter/: mod.rs  smoke_tests.rs
crates/cli-support/src/js/: binding.rs  mod.rs
crates/cli-support/src/test_runner/: deno.rs  headless.rs  node.rs  server.rs
crates/cli-support/src/testing/: deno.rs  headless.rs  node.rs  server.rs
crates/cli-support/src/transforms/: catch_handler.rs  mod.rs
crates/cli-support/src/wit/: incoming.rs  mod.rs  nonstandard.rs  outgoing.rs  section.rs  standard.rs
crates/cli/src/: lib.rs  wasm2es6js.rs  wasm_bindgen.rs  wasm_bindgen_build.rs  wasm_bindgen_test_runner.rs
crates/cli/src/wasm_bindgen_test_runner/: deno.rs  emscripten_test.js  headless.rs  index-emscripten.html  index-headless.html  index.html  node.rs  server.rs  shell.rs
crates/cli/tests/: reference.rs
crates/cli/tests/reference/: .gitattributes  add.bg.js  add.d.ts  add.js  add.wat  anyref-empty.bg.js  anyref-empty.js  anyref-empty.wat  anyref-import-catch.bg.js  anyref-import-catch.js  anyref-import-catch.wat  anyref-nop.bg.js  anyref-nop.d.ts  anyref-nop.js  anyref-nop.wat  async-number.bg.js  async-number.d.ts  async-number.js  async-number.wat  async-void.bg.js  async-void.d.ts  async-void.js  async-void.wat  builder.bg.js  builder.d.ts  builder.js  builder.wat  closures.bg.js  closures.d.ts  closures.js  closures.rs  closures.wat  constructor.bg.js  constructor.d.ts  constructor.js  constructor.rs  constructor.wat  custom-section.bg.js  custom-section.d.ts  custom-section.js  (+361 more)
crates/cli/tests/wasm-bindgen/: abort_reinit.rs  deterministic.rs  diagnostics.rs  main.rs  npm.rs  reference.rs
crates/cli/tests/wasm-bindgen-test-runner/: headless_streaming_tests.rs  main.rs
crates/creation-macros/: Cargo.toml  README.md
crates/creation-macros/src/: lib.rs
crates/creation-macros/tests/: creation.rs
crates/msrv/cli/: Cargo.toml
crates/test/: Cargo.toml  README.md
crates/test-cli-support/: Cargo.toml
crates/test-cli-support/src/: deno.rs  headless.rs  lib.rs  node.rs  server.rs
crates/test/benches/: headless_output.rs  headless_worker_output.rs
crates/test/sample/src/: lib.rs
crates/test/src/: bench.rs  lib.rs  utils.rs
crates/test/src/rt/: browser.rs  mod.rs  node.rs  worker.rs
crates/test/tests/: browser.rs  coverage_path.rs  dedicated.rs  node.rs  shared.rs
crates/toolchain/: Cargo.toml
crates/toolchain/src/: lib.rs
crates/toolchain/src/wasm_bindgen_build/: manifest.rs  mod.rs
crates/ts-gen/: Cargo.toml  README.md
crates/ts-gen-tests/: Cargo.toml  build.rs  package.json
crates/ts-gen-tests/src/: lib.rs
crates/ts-gen-tests/tests/: es_module_lexer.rs  node_console.rs  node_path.rs  node_url.rs
crates/ts-gen/src/: context.rs  external_map.rs  ir.rs  lib.rs  main.rs
crates/ts-gen/src/codegen/: classes.rs  enums.rs  functions.rs  mod.rs  signatures.rs  typemap.rs
crates/ts-gen/src/parse/: classify.rs  docs.rs  members.rs  merge.rs  mod.rs  resolve.rs  scope.rs  types.rs
crates/ts-gen/src/util/: diagnostics.rs  mod.rs  naming.rs
crates/ts-gen/tests/: snapshot.rs
crates/ts-gen/tests/fixtures/: basic.d.ts  cloudflare-worker.d.ts  coverage.d.ts  es-module-lexer.d.ts  node-console.d.ts  phase1.d.ts  phase2.d.ts  web-sys-extend.d.ts  workers-types.d.ts
crates/ts-gen/tests/snapshots/: basic.rs  cloudflare-worker.rs  coverage.rs  es-module-lexer.rs  node-console.rs  phase1.rs  phase2.rs  web-sys-extend.rs  workers-types.rs
crates/wasm-bindgen-build/: Cargo.toml  README.md
crates/wasm-bindgen-build/src/: main.rs  manifest.rs  wasm_opt.rs
crates/webidl-tests/: Cargo.toml  array.rs  build.rs  callbacks.rs  callbacks_typed.rs  consts.rs  dictionary.rs  globals.js  iterable.rs  main.rs  maplike.rs  namespace.rs  promise.rs  record.rs  setlike.rs  signature_stability.rs  simple.rs  unstable.rs  upcast.rs  wbg_generic.rs
crates/webidl-tests/src/features/: gen_A.rs  gen_ArrayBufferTest.rs  gen_B.rs  gen_BaseType.rs  gen_C.rs  gen_CallbackInterface1.rs  gen_CallbackInterface2.rs  gen_CamelCaseMe.rs  gen_CanvasLike.rs  gen_ChildType.rs  gen_ConstBool.rs  gen_ConstByte.rs  gen_ConstDoubles.rs  gen_ConstFloats.rs  gen_ConstLong.rs  gen_ConstLongLong.rs  gen_ConstShort.rs  gen_DictWithNullableSequence.rs  gen_DictWithUnion.rs  gen_GenericDict.rs  (+60 more)
examples/jspi/: Cargo.toml  build-post.mjs  index.html  package.json
examples/jspi-fetch-streams/: Cargo.toml  build-post.mjs  index.html  package.json
examples/jspi-fetch-streams/src/: lib.rs
examples/jspi-opfs/: Cargo.toml  build-post.mjs  index.html  package.json
examples/jspi-opfs/src/: lib.rs
examples/jspi/src/: lib.rs
examples/wasm-audio-worklet/: Cargo.toml  package.json
examples/wasm-audio-worklet/src/: lib.rs  wasm_audio.rs
(+46942 files in other folders)
