[package]
authors = ["The wasm-bindgen Developers"]
edition = "2021"
name = "wasm-bindgen-benchmark"
publish = false
rust-version = "1.71"
version = "0.0.0"

[dependencies]
js-sys = { path = '../crates/js-sys' }
wasm-bindgen = { path = '../' }
web-sys = { path = '../crates/web-sys', features = ['Node'] }

[lib]
crate-type = ['cdylib']
