[package]
name = "cargo-wasm-bindgen"
version = "0.2.106"
edition = "2021"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0"
home = "0.5.12"
cargo_metadata = "0.23.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.11"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[lints]
workspace = true
