[package]
authors = ["The wasm-bindgen Developers"]
description = """
Shared support for the wasm-bindgen-cli package, an internal dependency
"""
documentation = "https://docs.rs/wasm-bindgen-cli-support"
edition = "2021"
homepage = "https://wasm-bindgen.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-cli-support"
repository = "https://github.com/wasm-bindgen/wasm-bindgen/tree/master/crates/cli-support"
rust-version = "1.82"
version = "0.2.111"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
leb128 = "0.2"
log = "0.4"
rustc-demangle = "0.1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walrus = { version = "0.25.1", features = ['parallel'] }
wasm-bindgen-shared = { path = "../shared", version = "=0.2.111" }
wasmparser = "0.240"

[dev-dependencies]
rstest = "0.26"
wasmprinter = "0.243"
wast = "243"
wat = "1.243.0"

[lints]
workspace = true
