[package]
authors = ["The wasm-bindgen Developers"]
categories = ["wasm"]
default-run = 'wasm-bindgen'
description = """
Command line interface of the `#[wasm_bindgen]` attribute and project. For more
information see https://github.com/wasm-bindgen/wasm-bindgen.
"""
documentation = "https://wasm-bindgen.github.io/wasm-bindgen/"
edition = "2021"
homepage = "https://wasm-bindgen.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-cli"
repository = "https://github.com/wasm-bindgen/wasm-bindgen/tree/master/crates/cli"
rust-version = "1.82"
version = "0.2.104"

[package.metadata.binstall]
bin-dir = "wasm-bindgen-{ version }-{ target }/{ bin }{ binary-ext }"
pkg-url = "https://github.com/wasm-bindgen/wasm-bindgen/releases/download/{ version }/wasm-bindgen-{ version }-{ target }{ archive-suffix }"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4"
wasm-bindgen-cli-support = { path = "../cli-support", version = "=0.2.104" }
wasm-bindgen-test-cli-support = { path = "../test-cli-support", version = "=0.2.104" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1.4"
regex = "1.11.2"
rstest = "0.26"
wasmparser = "0.214"
wasmprinter = "0.214"

[features]
default = ["rustls-tls"]

native-tls = ["wasm-bindgen-test-cli-support/native-tls"]
rustls-tls = ["wasm-bindgen-test-cli-support/rustls-tls"]

# Legacy support
openssl = ["wasm-bindgen-test-cli-support/openssl"]
vendored-openssl = ["wasm-bindgen-test-cli-support/vendored-openssl"]

[lints]
workspace = true
