[package]
authors = ["The wasm-bindgen Developers"]
categories = ["wasm"]
default-run = 'wasm-bindgen'
description = """
Command line interface of the `#[wasm_bindgen]` attribute and project. For more
information see https://github.com/wasm-bindgen/wasm-bindgen.
"""
documentation = "https://wasm-bindgen.github.io/wasm-bindgen/"
edition = "2021"
homepage = "https://wasm-bindgen.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-cli"
repository = "https://github.com/wasm-bindgen/wasm-bindgen/tree/master/crates/cli"
rust-version = "1.82"
version = "0.2.110"

[package.metadata.binstall]
bin-dir = "wasm-bindgen-{ version }-{ target }/{ bin }{ binary-ext }"
pkg-url = "https://github.com/wasm-bindgen/wasm-bindgen/releases/download/{ version }/wasm-bindgen-{ version }-{ target }{ archive-suffix }"

[[bin]]
name = "wasm-bindgen"
path = "src/bin/wasm-bindgen.rs"

[[bin]]
name = "wasm-bindgen-test-runner"
path = "src/bin/wasm-bindgen-test-runner.rs"

[[bin]]
name = "wasm2es6js"
path = "src/bin/wasm2es6js.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4"
native-tls = { version = "0.2", default-features = false, optional = true }
rouille = { version = "3.0.0", default-features = false }
serde = { version = "1.0", features = ['derive'] }
serde_derive = "1.0"
serde_json = "1.0"
shlex = "1"
tempfile = "3.0"
ureq = { version = "3", default-features = false, features = ["brotli", "gzip"] }
walrus = "0.25.1"
wasm-bindgen-cli-support = { path = "../cli-support", version = "=0.2.110" }
wasm-bindgen-test-shared = { path = "../test-shared", version = "=0.2.110" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1.4"
regex = "1.11.2"
rstest = "0.26"
wasmparser = "0.240"
wasmprinter = "0.240"

[features]
default = ["rustls-tls"]

native-tls = ["ureq/native-tls"]
rustls-tls = ["ureq/rustls"]

# Legacy support
openssl = ["dep:native-tls"]
vendored-openssl = ["openssl", "native-tls/vendored"]

[lints]
workspace = true
