[package]
authors = ["The wasm-bindgen Developers"]
description = """
Shared support for the wasm-bindgen-test-runner binary from the wasm-bindgen-cli package, an internal dependency
"""
documentation = "https://docs.rs/wasm-bindgen-test-cli-support"
edition = "2021"
homepage = "https://wasm-bindgen.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-test-cli-support"
repository = "https://github.com/wasm-bindgen/wasm-bindgen/tree/master/crates/test-cli-support"
rust-version = "1.82"
version = "0.2.104"

[dependencies]
anyhow = "1.0"
log = "0.4"
native-tls = { version = "0.2", default-features = false, optional = true }
rouille = { version = "3.0.0", default-features = false }
rustc-demangle = "0.1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = { version = "1" }
tempfile = { version = "3.0" }
ureq = { version = "2.7", default-features = false, features = ["brotli", "gzip"] }
walrus = { version = "0.23", features = ['parallel'] }
wasm-bindgen-cli-support = { path = "../cli-support", version = "=0.2.104" }

[features]
default = ["rustls-tls"]

native-tls = ["ureq/native-tls"]
rustls-tls = ["ureq/tls"]

# Legacy support
openssl = ["dep:native-tls"]
vendored-openssl = ["openssl", "native-tls/vendored"]

[lints]
workspace = true
