[package]
authors = ["The wasm-bindgen Developers"]
description = "Internal testing crate for wasm-bindgen"
edition = "2021"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-test"
repository = "https://github.com/wasm-bindgen/wasm-bindgen"
rust-version = "1.71"
version = "0.3.61"

[features]
default = ["std"]
std = ["wasm-bindgen/std", "js-sys/std", "wasm-bindgen-futures/std"]

[dependencies]
gg-alloc = { version = "1.0", optional = true }
js-sys = { path = '../js-sys', version = '=0.3.88', default-features = false }
wasm-bindgen = { path = '../..', version = '=0.2.111', default-features = false }
wasm-bindgen-futures = { path = '../futures', version = '=0.4.61', default-features = false }
wasm-bindgen-test-macro = { path = '../test-macro', version = '=0.3.61' }
wasm-bindgen-test-shared = { path = "../test-shared", version = "=0.2.111" }

# benchmark required start
async-trait = "0.1.89"
cast = "0.3"
libm = "0.2.11"
nu-ansi-term = { version = "0.50", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
oorandom = "11.1.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
# benchmark required end

[target.'cfg(all(target_arch = "wasm32", wasm_bindgen_unstable_test_coverage))'.dependencies]
minicov = "0.3.8"

[dev-dependencies]
web-sys = { path = '../web-sys', features = ['console', 'Window', 'Performance'] }

[[bench]]
name = "headless_output"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[lints.clippy]
large_enum_variant = "allow"
new_without_default = "allow"
overly_complex_bool_expr = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[lib]
test = false
