[package]
edition = "2021"
name = "ts-gen-integration-tests"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[dependencies]
js-sys = { path = "../js-sys" }
wasm-bindgen = { path = "../.." }

[build-dependencies]
ts-gen = { path = "../ts-gen" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = { path = "../futures" }
wasm-bindgen-test = { path = "../test" }
