[package]
name = "wasm-bindgen-build"
version = "0.2.106"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.2.5", features = ["derive"] }
cargo_metadata = "0.23.1"
log = "0.4.28"
env_logger = "0.11.8"
path-clean = "1.0.1"
binary-install = "0.4.1"
which = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
serde_ignored = "0.1.14"
strsim = "0.11.1"
semver = "1.0.27"