[package]
authors = ["The wasm-bindgen Developers"]
edition = "2024"
name = "jspi-fetch-streams"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = { path = "../../crates/js-sys" }
wasm-bindgen = { path = "../../" }

[dependencies.web-sys]
path = "../../crates/web-sys"
features = [
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "Response",
    "Window",
]

[lints]
workspace = true
