[package]
authors = ["The wasm-bindgen Developers"]
edition = "2021"
name = "jspi-opfs"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = { path = "../../crates/js-sys" }
wasm-bindgen = { path = "../../" }

[dependencies.web-sys]
path = "../../crates/web-sys"
features = [
    "Blob",
    "File",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemWritableFileStream",
    "StorageManager",
    "WritableStream",
]

[lints]
workspace = true
