[package]
authors = ["The wasm-bindgen Developers"]
edition = "2021"
name = "jspi"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = { path = "../../crates/js-sys" }
wasm-bindgen = { path = "../../" }

[dependencies.web-sys]
features = ["Window"]
path = "../../crates/web-sys"

[lints]
workspace = true
